# frc-bot-2025

./: .gitignore  .gitmodules  README.md  TunerConstants.java  build.gradle  meson.build  pyproject.toml  robot.py  robotcontainer.py  tuner-project.json
.github/workflows/: build.yml  meson-build.yml
.wpilib/: wpilib_preferences.json
docs/: build-gradle.md  build-meson.md  build-python.md  codestyle.md  docker.md
meson/: native.ini  roborio.ini
meson/allwpilib/: meson.build
pybot/: autolink.py  autos.py  lifter.py  pyproject.toml  robot.py  robotcontainer.py  vision.py
pybot/deploy/choreo/: FRC2025Path.chor  moveAnDropBLUELEFT.traj  moveAnDropBLUEMIDDLE.traj  moveAnDropBLUERIGHT.traj  moveAndDropREDLEFT.traj  moveAndDropREDMIDDLE.traj  moveAndDropREDRIGHT.traj  outwayblue.traj  outwayred.traj
pybot/experimental/: camera.py
pybot/experimental/traj/: moveAnDropBLUELEFT.traj  moveAnDropBLUEMIDDLE.traj  moveAnDropBLUERIGHT.traj  moveAndDropREDLEFT.traj  moveAndDropREDMIDDLE.traj  moveAndDropREDRIGHT.traj
pybot/subsystems/: command_swerve_drivetrain.py
robot/: MyRobot.lua  RobotContainer.lua  simulate.lua
src/: commandswervedrivetrain.cpp  commandswervedrivetrain.hpp  container.cpp  lifter.cpp  lifter.hpp  limelight.hpp  meson.build  robot.cpp  robot.hpp  robotcontainer.cpp  robotcontainer.hpp  telemetry.cpp  telemetry.hpp  tunerconstants.cpp  tunerconstants.hpp
src/main/include/: RobotContainer.h
src/main/include/subsystems/: CommandSwerveDrivetrain.h
src/main/java/frc/robot/: RobotContainer.java
src/tunerx/cpp/: Robot.cpp  RobotContainer.cpp  Telemetry.cpp
src/tunerx/cpp/subsystems/: CommandSwerveDrivetrain.cpp
src/tunerx/include/: Robot.h  RobotContainer.h  Telemetry.h
src/tunerx/include/subsystems/: CommandSwerveDrivetrain.h
subprojects/: .gitignore  luabot.wrap
tests/: main.cpp
util/: fix-permissions.sh  simulate.sh
